# datpak

./: .gitignore  .gitmodules  CMakeLists.txt  gcaxArchive.cpp  gcaxArchive.hpp  main.cpp  main.hpp  state.hpp  vcpkg-configuration.json  vcpkg.json
data/: EmptySound.inc  templateDataHeader.inc  templateDataStruct.inc  templateMainBody.inc
helpers/: membuf.cpp  membuf.hpp  memstream.cpp  memstream.hpp
include/: dsptool.h
src/: gcaxArchive.cpp  gcaxArchive.hpp  main.cpp  state.hpp
